def mainClassName = "pro.gravit.launchermodules.s3updates.S3UpdatesModule"

sourceCompatibility = '17'
targetCompatibility = '17'

dependencies {
    implementation(platform('software.amazon.awssdk:bom:2.17.290'))
    implementation 'software.amazon.awssdk:s3'
    implementation 'software.amazon.awssdk:netty-nio-client'
}

jar {
    manifest.attributes("Module-Main-Class": mainClassName)
}